--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "767c156c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import os\n",
@@ -36,13 +47,17 @@
     "import openai\n",
     "import toml\n",
     "from clickhouse_connect import get_client\n",
+    "from tensorzero import AsyncTensorZeroGateway, InferenceResponse\n",
     "from IPython.display import clear_output\n",
-    "from minijinja import Environment"
+    "from minijinja import Environment\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()  #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "703152d9",
    "metadata": {},
    "outputs": [],
@@ -54,8 +69,13 @@
     "VAL_FRACTION = 0.2\n",
     "MAX_SAMPLES = 500\n",
     "\n",
+    "\n",
+    "TENSORZERO_GATEWAY_URL = \"http://localhost:3000\"\n",
+    "\n",
+    "\n",
+    "\n",
     "assert \"OPENAI_API_KEY\" in os.environ\n",
-    "#assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ\n",
+    "assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ\n",
     "\n",
     "openai_client = openai.OpenAI()"
    ]
@@ -78,19 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "5fc2f7e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#config_path = Path(CONFIG_PATH)\n",
-    "config = json.load(open(CONFIG_PATH)) if CONFIG_PATH.endswith(\".json\") else {}\n",
+    "config_path = Path(CONFIG_PATH)\n",
+    "#config = json.load(open(CONFIG_PATH)) if CONFIG_PATH.endswith(\".json\") else {}\n",
     "\n",
-    "#assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "#assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
+    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
+    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
     "\n",
-    "#with config_path.open(\"r\") as f:\n",
-    "#    config = toml.load(f)\n"
+    "with config_path.open(\"r\") as f:\n",
+    "    config = toml.load(f)\n"
    ]
   },
   {
@@ -103,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "2c1c9447",
    "metadata": {},
    "outputs": [],
@@ -127,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "247f9f86",
    "metadata": {},
    "outputs": [],
@@ -138,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "63881094",
    "metadata": {},
    "outputs": [],
