--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -35,8 +35,7 @@ You can bind the gateway to IPv4 and/or IPv6 addresses.
 To bind to an IPv6 address, you can set this field to a value like `[::]:3000`.
 Depending on the operating system, this value binds only to IPv6 (e.g. Windows) or to both (e.g. Linux by default).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [gateway]
 # ...
 bind_address = "0.0.0.0:3000"
@@ -141,8 +140,7 @@ If `true`, the gateway will throw an error on startup if it fails to validate th
 If `null`, the gateway will log a warning but continue if ClickHouse is not available, and it will use ClickHouse if available.
 If `false`, the gateway will not use ClickHouse.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [gateway]
 # ...
 observability.enabled = true
@@ -182,8 +180,7 @@ A model is provider agnostic, and the relevant providers are defined in the `pro
 If your `model_name` is not a basic string, it can be escaped with quotation marks.
 For example, periods are not allowed in basic strings, so you can define `llama-3.1-8b-instruct` as `[models."llama-3.1-8b-instruct"]`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku-20240307]
 # fieldA = ...
 # fieldB = ...
@@ -422,8 +419,7 @@ The supported provider types are `anthropic`, `aws_bedrock`, `aws_sagemaker`, `a
 
 The other fields in the provider sub-section depend on the provider type.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o.providers.azure]
 # ...
 type = "azure"
@@ -440,8 +436,7 @@ type = "azure"
 Defines the model name to use with the Anthropic API.
 See <a href="https://docs.anthropic.com/en/docs/about-claude/models#model-names" target="_blank">Anthropic's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.anthropic]
 # ...
 type = "anthropic"
@@ -456,8 +451,7 @@ model_name = "claude-3-haiku-20240307"
 
 Defines the location of the API key for the Anthropic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.anthropic]
 # ...
 type = "anthropic"
@@ -487,8 +481,7 @@ Alternatively, you can specify the region manually with the `region` field (reco
 Defines the model ID to use with the AWS Bedrock API.
 See <a href="https://docs.aws.amazon.com/bedrock/latest/userguide/model-ids.html" target="_blank">AWS Bedrock's documentation</a> for the list of available model IDs.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.aws_bedrock]
 # ...
 type = "aws_bedrock"
@@ -511,8 +504,7 @@ See the [AWS documentation on inference profiles](https://docs.aws.amazon.com/be
 
 Defines the AWS region to use with the AWS Bedrock API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.aws_bedrock]
 # ...
 type = "aws_bedrock"
@@ -555,8 +547,7 @@ Currently, the only supported `hosted_provider` options are:
 
 For example, if you're using Ollama, you can set:
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.aws_sagemaker]
 # ...
 type = "aws_sagemaker"
@@ -571,8 +562,7 @@ hosted_provider = "openai"
 
 Defines the model name to use with the AWS SageMaker API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.aws_sagemaker]
 # ...
 type = "aws_sagemaker"
@@ -587,8 +577,7 @@ model_name = "gemma3:1b"
 
 Defines the AWS region to use with the AWS Bedrock API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.aws_sagemaker]
 # ...
 type = "aws_sagemaker"
@@ -612,8 +601,7 @@ Defines the deployment ID of the Azure OpenAI deployment.
 
 See <a href="https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models" target="_blank">Azure OpenAI's documentation</a> for the list of available models.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o-mini.providers.azure]
 # ...
 type = "azure"
@@ -628,8 +616,7 @@ deployment_id = "gpt4o-mini-20240718"
 
 Defines the endpoint of the Azure OpenAI deployment (protocol and hostname).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o-mini.providers.azure]
 # ...
 type = "azure"
@@ -647,8 +634,7 @@ If the endpoint starts with `dynamic::`, the succeeding value will be treated as
 
 Defines the location of the API key for the Azure OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o-mini.providers.azure]
 # ...
 type = "azure"
@@ -669,8 +655,7 @@ api_key_location = "dynamic::azure_openai_api_key"
 Defines the model name to use with the DeepSeek API.
 Currently supported models are `deepseek-chat` (DeepSeek-v3) and `deepseek-reasoner` (R1).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.deepseek_chat.providers.deepseek]
 # ...
 type = "deepseek"
@@ -685,8 +670,7 @@ model_name = "deepseek-chat"
 
 Defines the location of the API key for the DeepSeek provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.deepseek_chat.providers.deepseek]
 # ...
 type = "deepseek"
@@ -709,8 +693,7 @@ Defines the model name to use with the Fireworks API.
 See <a href="https://fireworks.ai/models" target="_blank">Fireworks' documentation</a> for the list of available model names.
 You can also deploy your own models on Fireworks AI.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."llama-3.1-8b-instruct".providers.fireworks]
 # ...
 type = "fireworks"
@@ -725,8 +708,7 @@ model_name = "accounts/fireworks/models/llama-v3p1-8b-instruct"
 
 Defines the location of the API key for the Fireworks provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."llama-3.1-8b-instruct".providers.fireworks]
 # ...
 type = "fireworks"
@@ -755,8 +737,7 @@ Use `model_id` for off-the-shelf models and `endpoint_id` for fine-tuned models 
 
 Defines the location (region) of the GCP Vertex AI Anthropic model.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.gcp_vertex]
 # ...
 type = "gcp_vertex_anthropic"
@@ -773,8 +754,7 @@ Defines the model ID of the GCP Vertex AI model.
 
 See <a href="https://docs.anthropic.com/en/api/claude-on-vertex-ai#api-model-names" target="_blank">Anthropic's GCP documentation</a> for the list of available model IDs.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.gcp_vertex]
 # ...
 type = "gcp_vertex_anthropic"
@@ -791,8 +771,7 @@ Use `model_id` for off-the-shelf models and `endpoint_id` for fine-tuned models 
 
 Defines the project ID of the GCP Vertex AI model.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku-2024030.providers.gcp_vertex]
 # ...
 type = "gcp_vertex"
@@ -807,8 +786,7 @@ project_id = "your-project-id"
 
 Defines the location of the credentials for the GCP Vertex Anthropic provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.claude-3-haiku.providers.gcp_vertex]
 # ...
 type = "gcp_vertex_anthropic"
@@ -838,8 +816,7 @@ Use `model_id` for off-the-shelf models and `endpoint_id` for fine-tuned models 
 
 Defines the location (region) of the GCP Vertex Gemini model.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.gcp_vertex]
 # ...
 type = "gcp_vertex_gemini"
@@ -856,8 +833,7 @@ Defines the model ID of the GCP Vertex AI model.
 
 See <a href="https://cloud.google.com/vertex-ai/generative-ai/docs/learn/model-versions" target="_blank">GCP Vertex AI's documentation</a> for the list of available model IDs.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.gcp_vertex]
 # ...
 type = "gcp_vertex_gemini"
@@ -872,8 +848,7 @@ model_id = "gemini-1.5-flash-001"
 
 Defines the project ID of the GCP Vertex AI model.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.gcp_vertex]
 # ...
 type = "gcp_vertex_gemini"
@@ -888,8 +863,7 @@ project_id = "your-project-id"
 
 Defines the location of the credentials for the GCP Vertex Gemini provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.gcp_vertex]
 # ...
 type = "gcp_vertex_gemini"
@@ -911,8 +885,7 @@ credential_location = "dynamic::gcp_credentials_path"
 Defines the model name to use with the Google AI Studio Gemini API.
 See <a href="https://ai.google.dev/gemini-api/docs/models/gemini" target="_blank">Google AI Studio's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.google_ai_studio_gemini]
 # ...
 type = "google_ai_studio_gemini"
@@ -927,8 +900,7 @@ model_name = "gemini-1.5-flash-001"
 
 Defines the location of the API key for the Google AI Studio Gemini provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gemini-1.5-flash".providers.google_ai_studio_gemini]
 # ...
 type = "google_ai_studio_gemini"
@@ -950,8 +922,7 @@ Defines the model name to use with the Groq API.
 
 See <a href="https://groq.com/pricing" target="_blank">Groq's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama4_scout_17b_16e_instruct.providers.groq]
 # ...
 type = "groq"
@@ -966,8 +937,7 @@ model_name = "meta-llama/llama-4-scout-17b-16e-instruct"
 
 Defines the location of the API key for the Groq provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama4_scout_17b_16e_instruct.providers.groq]
 # ...
 type = "groq"
@@ -989,8 +959,7 @@ Defines the model name to use with the Hyperbolic API.
 
 See <a href="https://app.hyperbolic.xyz/models" target="_blank">Hyperbolic's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."meta-llama/Meta-Llama-3-70B-Instruct".providers.hyperbolic]
 # ...
 type = "hyperbolic"
@@ -1005,8 +974,7 @@ model_name = "meta-llama/Meta-Llama-3-70B-Instruct"
 
 Defines the location of the API key for the Hyperbolic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."meta-llama/Meta-Llama-3-70B-Instruct".providers.hyperbolic]
 # ...
 type = "hyperbolic"
@@ -1028,8 +996,7 @@ Defines the model name to use with the Mistral API.
 
 See <a href="https://docs.mistral.ai/getting-started/models/" target="_blank">Mistral's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."open-mistral-nemo".providers.mistral]
 # ...
 type = "mistral"
@@ -1044,8 +1011,7 @@ model_name = "open-mistral-nemo-2407"
 
 Defines the location of the API key for the Mistral provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."open-mistral-nemo".providers.mistral]
 # ...
 type = "mistral"
@@ -1068,8 +1034,7 @@ Defines the base URL of the OpenAI API.
 You can use the `api_base` field to use an API provider that is compatible with the OpenAI API.
 However, many providers are only "approximately compatible" with the OpenAI API, so you might need to use a specialized model provider in those cases.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."gpt-4o".providers.openai]
 # ...
 type = "openai"
@@ -1086,8 +1051,7 @@ Defines the model name to use with the OpenAI API.
 
 See <a href="https://platform.openai.com/docs/models" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o-mini.providers.openai]
 # ...
 type = "openai"
@@ -1102,8 +1066,7 @@ model_name = "gpt-4o-mini-2024-07-18"
 
 Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt-4o-mini.providers.openai]
 # ...
 type = "openai"
@@ -1126,8 +1089,7 @@ Defines the model name to use with the OpenRouter API.
 
 See <a href="https://openrouter.ai/models" target="_blank">OpenRouter's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt4_turbo.providers.openrouter]
 # ...
 type = "openrouter"
@@ -1142,8 +1104,7 @@ model_name = "openai/gpt4.1"
 
 Defines the location of the API key for the OpenRouter provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.gpt4_turbo.providers.openrouter]
 # ...
 type = "openrouter"
@@ -1163,8 +1124,7 @@ api_key_location = "dynamic::openrouter_api_key"
 
 Defines the base URL of the SGLang API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama.providers.sglang]
 # ...
 type = "sglang"
@@ -1179,8 +1139,7 @@ api_base = "http://localhost:8080/v1/"
 
 Defines the location of the API key for the SGLang provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama.providers.sglang]
 # ...
 type = "sglang"
@@ -1204,8 +1163,7 @@ Defines the model name to use with the Together API.
 See <a href="https://docs.together.ai/docs/chat-models" target="_blank">Together's documentation</a> for the list of available model names.
 You can also deploy your own models on Together AI.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama3_1_8b_instruct_turbo.providers.together]
 # ...
 type = "together"
@@ -1220,8 +1178,7 @@ model_name = "meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo"
 
 Defines the location of the API key for the Together AI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.llama3_1_8b_instruct_turbo.providers.together]
 # ...
 type = "together"
@@ -1241,8 +1198,7 @@ api_key_location = "dynamic::together_api_key"
 
 Defines the base URL of the VLLM API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."phi-3.5-mini-instruct".providers.vllm]
 # ...
 type = "vllm"
@@ -1257,8 +1213,7 @@ api_base = "http://localhost:8000/v1/"
 
 Defines the model name to use with the vLLM API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."phi-3.5-mini-instruct".providers.vllm]
 # ...
 type = "vllm"
@@ -1273,8 +1228,7 @@ model_name = "microsoft/Phi-3.5-mini-instruct"
 
 Defines the location of the API key for the vLLM provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models."phi-3.5-mini-instruct".providers.vllm]
 # ...
 type = "vllm"
@@ -1297,8 +1251,7 @@ Defines the model name to use with the xAI API.
 
 See <a href="https://docs.x.ai/docs/models" target="_blank">xAI's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.grok_2_1212.providers.xai]
 # ...
 type = "xai"
@@ -1314,8 +1267,7 @@ model_name = "grok-2-1212"
 Defines the location of the API key for the xAI provider.
 The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.grok_2_1212.providers.xai]
 # ...
 type = "xai"
@@ -1335,8 +1287,7 @@ api_key_location = "dynamic::xai_api_key"
 
 Defines the base URL of the TGI API.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.phi_4.providers.tgi]
 # ...
 type = "tgi"
@@ -1351,8 +1302,7 @@ api_base = "http://localhost:8080/v1/"
 
 Defines the location of the API key for the TGI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [models.phi_4.providers.tgi]
 # ...
 type = "tgi"
@@ -1374,8 +1324,7 @@ A model is provider agnostic, and the relevant providers are defined in the `pro
 If your `model_name` is not a basic string, it can be escaped with quotation marks.
 For example, periods are not allowed in basic strings, so you can define `embedding-0.1` as `[embedding_models."embedding-0.1"]`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [embedding_models.openai-text-embedding-3-small]
 # fieldA = ...
 # fieldB = ...
@@ -1469,13 +1418,9 @@ extra_body = [
 
 Defines the types of the provider. See [Integrations &raquo; Model Providers](/integrations/model-providers) for details.
 
-TensorZero currently only supports `openai` as a provider for embedding models.
-More integrations are on the way.
-
 The other fields in the provider sub-section depend on the provider type.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [embedding_models.model-name.providers.openai]
 # ...
 type = "openai"
@@ -1494,8 +1439,7 @@ Defines the base URL of the OpenAI API.
 You can use the `api_base` field to use an API provider that is compatible with the OpenAI API.
 However, many providers are only "approximately compatible" with the OpenAI API, so you might need to use a specialized model provider in those cases.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [embedding_models.openai-text-embedding-3-small.providers.openai]
 # ...
 type = "openai"
@@ -1512,8 +1456,7 @@ Defines the model name to use with the OpenAI API.
 
 See <a href="https://platform.openai.com/docs/models/embeddings" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [embedding_models.openai-text-embedding-3-small.providers.openai]
 # ...
 type = "openai"
@@ -1528,8 +1471,7 @@ model_name = "text-embedding-3-small"
 
 Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [embedding_models.openai-text-embedding-3-small.providers.openai]
 # ...
 type = "openai"
@@ -1552,8 +1494,7 @@ A function expresses the abstract behavior of an LLM call (e.g. the schemas for 
 If your `function_name` is not a basic string, it can be escaped with quotation marks.
 For example, periods are not allowed in basic strings, so you can define `summarize-2.0` as `[functions."summarize-2.0"]`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # fieldA = ...
 # fieldB = ...
@@ -1577,8 +1518,7 @@ If provided, the assistant schema file should contain a <a href="https://json-sc
 The variables in the schema are used for templating the assistant messages.
 If a schema is provided, all function variants must also provide an assistant template (see below).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 assistant_schema = "./functions/draft-email/assistant_schema.json"
@@ -1599,8 +1539,7 @@ Defines a description of the function.
 
 In the future, this description will inform automated optimization recipes.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.extract_data]
 # ...
 description = "Extract the sender's name (e.g. 'John Doe'), email address (e.g. 'john.doe@example.com'), and phone number (e.g. '+1234567890') from a customer's email."
@@ -1619,8 +1558,7 @@ If provided, the system schema file should contain a <a href="https://json-schem
 The variables in the schema are used for templating the system message.
 If a schema is provided, all function variants must also provide a system template (see below).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 system_schema = "./functions/draft-email/system_schema.json"
@@ -1643,8 +1581,7 @@ The supported function types are `chat` and `json`.
 
 Most other fields in the function section depend on the function type.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 type = "chat"
@@ -1664,8 +1601,7 @@ If not set, TensorZero will default to the model provider's default behavior.
 
 Most model providers do not support this feature. In those cases, this field will be ignored.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 type = "chat"
@@ -1761,8 +1697,7 @@ The path is relative to the configuration file.
 
 This schema is used for validating the output of the function.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.extract-customer-info]
 # ...
 type = "json"
@@ -1784,8 +1719,7 @@ If provided, the user schema file should contain a <a href="https://json-schema.
 The variables in the schema are used for templating the user messages.
 If a schema is provided, all function variants must also provide a user template (see below).
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 user_schema = "./functions/draft-email/user_schema.json"
@@ -1834,8 +1768,7 @@ TensorZero currently supports the following variant types:
 | `experimental_dynamic_in_context_learning` | Selects similar high-quality examples using an embedding of the input, and incorporates them into the prompt to enhance context and improve response quality.                                                                                           |
 | `experimental_mixture_of_n`                | Generates multiple response candidates with other variants, and combines the responses using a fuser model.                                                                                                                                             |
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 type = "chat_completion"
@@ -1855,8 +1788,7 @@ The path is relative to the configuration file.
 This file should contain a <a href="https://docs.rs/minijinja/latest/minijinja/syntax/index.html" target="_blank">MiniJinja</a> template for the assistant messages.
 If the template uses any variables, the variables should be defined in the function's `assistant_schema` field.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 assistant_schema = "./functions/draft-email/assistant_schema.json"
@@ -1996,8 +1928,7 @@ Intelligence-Level: AGI
 
 Penalizes new tokens based on their frequency in the text so far if positive, encourages them if negative.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 frequency_penalty = 0.2
@@ -2020,8 +1951,7 @@ The supported modes are:
 - `strict`: Make a chat completion request with strict JSON mode (if supported by the provider). For example, the TensorZero Gateway uses Structured Outputs for OpenAI.
 - `implicit_tool`: Make a special-purpose tool use request under the hood, and convert the tool call into a JSON response.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 json_mode = "strict"
@@ -2035,8 +1965,7 @@ json_mode = "strict"
 
 Defines the maximum number of tokens to generate.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 max_tokens = 100
@@ -2114,8 +2043,7 @@ Then:
 
 Penalizes new tokens based on that have already appeared in the text so far if positive, encourages them if negative.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 presence_penalty = 0.5
@@ -2131,8 +2059,7 @@ TensorZero's retry strategy is truncated exponential backoff with jitter.
 The `num_retries` parameter defines the number of retries (not including the initial request).
 The `max_delay_s` parameter defines the maximum delay between retries.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 retries = { num_retries = 3, max_delay_s = 10 }
@@ -2146,8 +2073,7 @@ retries = { num_retries = 3, max_delay_s = 10 }
 
 Defines the seed to use for the variant.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 seed = 42
@@ -2164,8 +2090,7 @@ The path is relative to the configuration file.
 This file should contain a <a href="https://docs.rs/minijinja/latest/minijinja/syntax/index.html" target="_blank">MiniJinja</a> template for the system messages.
 If the template uses any variables, the variables should be defined in the function's `system_schema` field.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 system_schema = "./functions/draft-email/system_schema.json"
@@ -2184,8 +2109,7 @@ system_template = "./functions/draft-email/prompt-v1/system_template.minijinja"
 
 Defines the temperature to use for the variant.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 temperature = 0.5
@@ -2222,8 +2146,7 @@ Multiple timeouts can be active simultaneously.
 Defines the `top_p` to use for the variant during [nucleus sampling](https://en.wikipedia.org/wiki/Top-p_sampling).
 Typically at most one of `top_p` and `temperature` is set.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 top_p = 0.3
@@ -2241,8 +2164,7 @@ The path is relative to the configuration file.
 This file should contain a <a href="https://docs.rs/minijinja/latest/minijinja/syntax/index.html" target="_blank">MiniJinja</a> template for the user messages.
 If the template uses any variables, the variables should be defined in the function's `user_schema` field.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email]
 # ...
 user_schema = "./functions/draft-email/user_schema.json"
@@ -2269,8 +2191,7 @@ You can disable a variant by setting its weight to `0`.
 The variant will only be used if there are no other variants available for sampling or if the variant is requested explicitly in the request with `variant_name`.
 This is useful for defining fallback variants, which won't be used unless no other variants are available.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 weight = 1.0
@@ -2293,8 +2214,7 @@ The `candidates` parameter specifies a list of variant names used to generate ca
 For example, if you have two variants defined (`promptA` and `promptB`), you could set up the `candidates` list to generate two responses using `promptA` and one using `promptB` using the snippet below.
 The evaluator would then choose the best response from these three candidates.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.promptA]
 type = "chat_completion"
 # ...
@@ -2382,8 +2302,7 @@ You can disable a variant by setting its weight to `0`.
 The variant will only be used if there are no other variants available for sampling or if the variant is requested explicitly in the request with `variant_name`.
 This is useful for defining fallback variants, which won't be used unless no other variants are available.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 weight = 1.0
@@ -2418,8 +2337,7 @@ The `candidates` parameter specifies a list of variant names used to generate ca
 For example, if you have two variants defined (`promptA` and `promptB`), you could set up the `candidates` list to generate two responses using `promptA` and one using `promptB` using the snippet below.
 The fuser would then combine the three responses.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.promptA]
 type = "chat_completion"
 # ...
@@ -2721,8 +2639,7 @@ The supported modes are:
 - `strict`: Make a chat completion request with strict JSON mode (if supported by the provider). For example, the TensorZero Gateway uses Structured Outputs for OpenAI.
 - `implicit_tool`: Make a special-purpose tool use request under the hood, and convert the tool call into a JSON response.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 json_mode = "strict"
@@ -2736,8 +2653,7 @@ json_mode = "strict"
 
 Defines the number of examples to retrieve for the inference.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.dicl]
 # ...
 k = 10
@@ -2751,8 +2667,7 @@ k = 10
 
 Defines the maximum number of tokens to generate.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 max_tokens = 100
@@ -2832,8 +2747,7 @@ TensorZero's retry strategy is truncated exponential backoff with jitter.
 The `num_retries` parameter defines the number of retries (not including the initial request).
 The `max_delay_s` parameter defines the maximum delay between retries.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 retries = { num_retries = 3, max_delay_s = 10 }
@@ -2847,8 +2761,7 @@ retries = { num_retries = 3, max_delay_s = 10 }
 
 Defines the seed to use for the variant.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 seed = 42
@@ -2866,8 +2779,7 @@ The system instruction is a text file that will be added to the evaluator's syst
 Unlike `system_template`, it doesn't support variables.
 This file contains static instructions that define the behavior and role of the AI assistant for the specific function variant.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.dicl]
 # ...
 system_instructions = "./functions/draft-email/prompt-v1/system_template.txt"
@@ -2881,8 +2793,7 @@ system_instructions = "./functions/draft-email/prompt-v1/system_template.txt"
 
 Defines the temperature to use for the variant.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 temperature = 0.5
@@ -2926,8 +2837,7 @@ You can disable a variant by setting its weight to `0`.
 The variant will only be used if there are no other variants available for sampling or if the variant is requested explicitly in the request with `variant_name`.
 This is useful for defining fallback variants, which won't be used unless no other variants are available.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [functions.draft-email.variants.prompt-v1]
 # ...
 weight = 1.0
@@ -2951,8 +2861,7 @@ The metric name can't be `comment` or `demonstration`, as those names are reserv
 If your `metric_name` is not a basic string, it can be escaped with quotation marks.
 For example, periods are not allowed in basic strings, so you can define `beats-gpt-3.5` as `[metrics."beats-gpt-3.5"]`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [metrics.task-completed]
 # fieldA = ...
 # fieldB = ...
@@ -2973,8 +2882,7 @@ Defines whether the metric applies to individual inference or across entire epis
 
 The supported levels are `inference` and `episode`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [metrics.valid-output]
 # ...
 level = "inference"
@@ -2995,8 +2903,7 @@ Defines whether the metric should be maximized or minimized.
 
 The supported values are `max` and `min`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [metrics.mistakes-made]
 # ...
 optimize = "min"
@@ -3017,8 +2924,7 @@ Defines the type of the metric.
 
 The supported metric types are `boolean` and `float`.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [metrics.user-rating]
 # ...
 type = "float"
@@ -3065,8 +2971,7 @@ Defines the description of the tool provided to the model.
 
 You can typically materially improve the quality of responses by providing a detailed description of the tool.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [tools.get-temperature]
 # ...
 description = "Get the current temperature in a given location (e.g. \"Tokyo\") using the specified unit (must be \"celsius\" or \"fahrenheit\")."
@@ -3083,8 +2988,7 @@ The path is relative to the configuration file.
 
 This file should contain a <a href="https://json-schema.org/" target="_blank">JSON Schema</a> for the parameters of the tool.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [tools.get-temperature]
 # ...
 parameters = "./tools/get-temperature.json"
@@ -3103,8 +3007,7 @@ Only a few providers support strict JSON generation.
 For example, the TensorZero Gateway uses Structured Outputs for OpenAI.
 If the provider does not support strict mode, the TensorZero Gateway ignores this field.
 
-```toml
-// tensorzero.toml
+```toml title="tensorzero.toml"
 [tools.get-temperature]
 # ...
 strict = true
